k8s/backend-mqtt-deployment.yaml
---
# ./k8s/backend-mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darkseek-backend-mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: darkseek-backend-mqtt
  template:
    metadata:
      labels:
        app: darkseek-backend-mqtt
    spec:
      restartPolicy: Always
      dnsConfig:
        options:
          - name: ndots
            value: "5"
      containers:
        - name: backend-mqtt
          image: us-central1-docker.pkg.dev/${GCP_PROJECT_ID}/darkseek/darkseek-backend-mqtt:latest
          startupProbe:
            exec:
              command: ["cat", "/tmp/mqtt-healthy"]
            initialDelaySeconds: 30
            failureThreshold: 90
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["cat", "/tmp/mqtt-healthy"]
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command: ["cat", "/tmp/mqtt-healthy"]
            initialDelaySeconds: 23
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: certs-volume
              mountPath: /etc/mosquitto/ssl
              readOnly: true 
      volumes:
        - name: certs-volume
          secret:
            secretName: darkseek-mqtt-certs
