k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: darkseek-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: "darkseek-backend-ws"
spec:
  tls:
  - hosts:
    - darkseekblu.com
    secretName: darkseek-tls
  rules:
  - host: darkseekblu.com
    http:
      paths:
      - path: /ws/
        pathType: Prefix
        backend:
          service:
            name: darkseek-backend-ws
            port:
              number: 8000
      - path: /process_query/
        pathType: Prefix
        backend:
          service:
            name: darkseek-backend-mqtt
            port:
              number: 8001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: darkseek-frontend
            port:
              number: 8501
